--- a/app/views/14-0/reserve-delete-confirmation.html
+++ b/app/views/14-0/reserve-delete-confirmation.html
@@ -11,16 +11,14 @@
 
 {% set _inError = myData.validationError %}
 
-{% block beforeContent %}
+{% block content %}
+
 {{ govukBackLink({
     text: "Back",
     href: "javascript: window.history.go(-1)"
   }) }}
-{% endblock %}
 
-{% block content %}
-
-<div class="govuk-grid-row">
+<div class="govuk-grid-row" style="padding-top: 40px">
     <div class="govuk-grid-column-two-thirds">
 
         {% if _inError == "true" %}
@@ -41,33 +39,39 @@
         </div>
         {% endif %}
 
-        <h1 class="govuk-heading-xl">
-            When will the apprentice start their apprenticeship training?
-        </h1>
+        <!-- Panel -->
+        <div class="govuk-panel govuk-panel--confirmation govuk-!-margin-bottom-8" style="background-color:#28a197">
+            <h1 class="govuk-panel__title">
+                Reservation successfully deleted
+            </h1>
+        </div>
 
         <form method="POST">
 
-            <div
-                class="govuk-form-group {% if myData.validationErrors.whichStartDateAnswer %}govuk-form-group--error{% endif %}">
+            <div class="govuk-form-group {% if myData.validationErrors.deleteWhatNextAnswer %}govuk-form-group--error{% endif %}">
                 <fieldset class="govuk-fieldset" aria-describedby="radio-hint">
-                    <span id="radio-hint" class="govuk-hint">
-                        The apprentice can start their apprenticeship training anytime in the month you choose, or the following 2 months.
-                    </span>
-                    {% if myData.validationErrors.whichStartDateAnswer %}
-                    <span id="whichStartDateAnswer-error" class="govuk-error-message">
+                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+                        What's next?
+                    </legend>
+                    {% if myData.validationErrors.deleteWhatNextAnswer %}
+                    <span id="deleteWhatNextAnswer-error" class="govuk-error-message">
                         <span class="govuk-visually-hidden">Error:</span>
-                        You must select a start date
+                        {{myData.validationErrors.deleteWhatNextAnswer.message}}
                     </span>
                     {% endif %}
-                    <div class="govuk-radios" id="whichStartDateAnswer">
-                        {% for startDate in myData.startDates %}
+                    <div class="govuk-radios" id="deleteWhatNextAnswer">
                         <div class="govuk-radios__item">
-                            <input class="govuk-radios__input" id="whichStartDate-{{loop.index}}" name="whichStartDateAnswer" type="radio" value="{{startDate.id}}" {% if myData.whichStartDateAnswerTemp == startDate.id %}checked{% endif %}>
-                            <label class="govuk-label govuk-radios__label" for="whichStartDate-{{loop.index}}">
-                                {{startDate.name}}
+                            <input class="govuk-radios__input" id="deleteWhatNext-1" name="deleteWhatNextAnswer" type="radio" value="manage" {% if myData.deleteWhatNextAnswerTemp == 'manage' %}checked{% endif %}>
+                            <label class="govuk-label govuk-radios__label" for="deleteWhatNext-1">
+                                Return to manage reservations
                             </label>
                         </div>
-                        {% endfor %}
+                        <div class="govuk-radios__item">
+                            <input class="govuk-radios__input" id="deleteWhatNext-2" name="deleteWhatNextAnswer" type="radio" value="home" {% if myData.deleteWhatNextAnswerTemp == 'home' %}checked{% endif %}>
+                            <label class="govuk-label govuk-radios__label" for="deleteWhatNext-2">
+                                Go to homepage
+                            </label>
+                        </div>
                     </div>
                 </fieldset>
             </div>
@@ -75,7 +79,7 @@
             <!-- Button -->
             {% from "govuk/components/button/macro.njk" import govukButton %}
             {{ govukButton({
-              text: "Save and continue"
+              text: "Continue"
             }) }}
 
         </form>
