--- a/app/views/14-0/reserve-reservations.html
+++ b/app/views/14-0/reserve-reservations.html
@@ -18,6 +18,13 @@
   {% extends "layout.html" %}
 {% endif %}
 
+{% set _reserveStartURL = "reserve-start" %}
+{% if _reservationstotal >= myData.limit %}
+  {% set _reserveStartURL = "reserve-limit-reached" %}
+{% elif myData.upcoming != "false" %}
+  {% set _reserveStartURL = "reserve-upcoming" %}
+{% endif %}
+
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 
 {% block beforeContent %}
@@ -46,7 +53,7 @@
         </h1>
 
         {% if _reservationstotal > 0 %}
-          <p class="govuk-heading-m"><a class="govuk-link" href="reserve-start">Reserve more funding</a></p>
+          <p class="govuk-heading-m"><a class="govuk-link" href="{{_reserveStartURL}}">Reserve more funding</a></p>
           <p class="govuk-body">{{_reservationstotal}} {% if _reservationstotal == 1 %}reservation{% else %}reservations{% endif %}</p>
           <table class="govuk-table">
               <!-- <caption class="govuk-table__caption">Dates and amounts</caption> -->
@@ -86,7 +93,7 @@
                     <td class="govuk-table__cell govuk-table__cell--numeric" >
                       {% if _reservation.status == "available" %}
                       <a href="#add" class="govuk-link">Add apprentice</a><br>
-                      <a href="#delete" class="govuk-link">Delete</a>
+                      <a href="reserve-delete?delete={{_reservation.id}}" class="govuk-link">Delete</a>
                       {% elif _reservation.status == "expired" %}
                       <strong class="govuk-tag govuk-tag--inactive">expired</strong>
                       {% elif _reservation.status == "used" %}
@@ -100,7 +107,7 @@
         {% else %}
           <h2 class="govuk-heading-m ">There are no funding reservations to use</h2>
           <p class="govuk-body ">You need to reserve funding in order to add a new apprentice.</p>
-          <a role="button" tabindex="1" draggable="false" class="govuk-button" href="reserve-start">Reserve funding</a>
+          <a role="button" tabindex="1" draggable="false" class="govuk-button" href="{{_reserveStartURL}}">Reserve funding</a>
         {% endif %}
 
     </div>
