--- a/app/views/14-0/reserve-start.html
+++ b/app/views/14-0/reserve-start.html
@@ -1,9 +1,12 @@
 {% set _account = myData.accounts[myData.account] %}
 
+<!-- Layout type -->
 {% if _account.type == "emp" %}
   {% extends "layout-as-emp.html" %}
 {% elif _account.type == "pro" %}
   {% extends "layout-as-pro.html" %}
+{% else %}
+  {% extends "layout.html" %}
 {% endif %}
 
 {% block beforeContent %}
