14-0 prov mvs journey

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -140,6 +140,13 @@ $page-colour: #fff;
     margin-bottom: .5em
 }
 
+//Das provider cards
+.das-card__pro {
+  border-bottom: 1px solid #bfc1c3;
+  margin-top: 20px;
+  padding-bottom: 20px;
+}
+
 //Sections
 .das-section-dashboard {
     border-bottom: 2px solid #bfc1c3;
