--- a/app/views/14-0/reserve-reservations-pro.html
+++ b/app/views/14-0/reserve-reservations-pro.html
@@ -1,4 +1,4 @@
-{% set _account = myData.accounts[myData.account] %}
+{% set _account = myData.accounts[myData.pro] %}
 
 <!-- Visible reservations -->
 {% set _reservations = [] %}
@@ -49,8 +49,10 @@
         {% endif %}
 
         <h1 class="govuk-heading-xl" style="margin-bottom: 90px">
-            Your funding reservations
+            Funding for non-levy employers
         </h1>
+
+        <p class="govuk-body">This feature is currently only available to employers and training providers taking part in testing.</p>
 
         {% if _reservationstotal > 0 %}
           <p class="govuk-heading-m"><a class="govuk-link" href="{{_reserveStartURL}}">Reserve more funding</a></p>
@@ -59,7 +61,7 @@
               <!-- <caption class="govuk-table__caption">Dates and amounts</caption> -->
               <thead class="govuk-table__head">
                 <tr class="govuk-table__row">
-                  <th scope="col" class="govuk-table__header">Organisation</th>
+                  <th scope="col" class="govuk-table__header">Employer</th>
                   <th scope="col" class="govuk-table__header">Apprenticeship training</th>
                   <th scope="col" class="govuk-table__header">Apprenticeship start date</th>
                   <th scope="col" class="govuk-table__header"></th>
@@ -67,12 +69,7 @@
               </thead>
               <tbody class="govuk-table__body">
               {% for _reservation in _reservations %}
-                {% set _entityLabel = "" %}
-                {% for _entity in _account.entities %}
-                  {% if _entity.id == _reservation.entity %}
-                    {% set _entityLabel = _entity.name | upper %}
-                  {% endif %}
-                {% endfor %}
+                {% set _entityLabel = _reservation.entity | upper %}
                 {% set _courseLabel = "" %}
                 {% for _course in myData.courses.list %}
                   {% if _course.value == _reservation.course %}
@@ -87,13 +84,12 @@
                 {% endfor %}
                 
                   <tr class="govuk-table__row">
-                    <td class="govuk-table__cell">{{_entityLabel}}</td>
+                    <th scope="row" class="govuk-table__header">{{_entityLabel}}</th>
                     <td class="govuk-table__cell">{{_courseLabel}}</td>
                     <td class="govuk-table__cell">{{_startDateLabel}}</td>
                     <td class="govuk-table__cell govuk-table__cell--numeric" >
                       {% if _reservation.status == "available" %}
-                      <a href="#add" class="govuk-link">Add apprentice</a><br>
-                      <a href="reserve-delete?delete={{_reservation.id}}" class="govuk-link">Delete</a>
+                      <a href="#add" class="govuk-link">Add apprentice</a>{% if _reservation.owned == true %}<br><a href="reserve-delete?delete={{_reservation.id}}" class="govuk-link">Delete</a>{% endif %}
                       {% elif _reservation.status == "expired" %}
                       <strong class="govuk-tag govuk-tag--inactive">expired</strong>
                       {% elif _reservation.status == "used" %}
