--- a/app/views/layout-as-pro.html
+++ b/app/views/layout-as-pro.html
@@ -36,13 +36,13 @@
     <div class="govuk-width-container">
         <ul class="das-navigation__list ">
             <li class="das-navigation__list-item">
-                <a class="das-navigation__link" href="#">Home</a>
+                <a class="das-navigation__link {% if _currentPage == 'provider-home' %}das-navigation__link--current{% endif %}" href="provider-home">Home</a>
             </li>
             <li class="das-navigation__list-item">
                 <a class="das-navigation__link" href="#">Your cohorts</a>
             </li>
             <li class="das-navigation__list-item">
-                <a class="das-navigation__link das-navigation__link--current" href="#">Manage funding</a>
+                <a class="das-navigation__link {% if _currentPage != 'provider-home' %}das-navigation__link--current{% endif %}" href="reserve-reservations-pro">Manage funding</a>
             </li>
             <li class="das-navigation__list-item">
                 <a class="das-navigation__link" href="#">Manage your apprentices</a>
