--- a/app/views/14-0/reserve-choose-start-date.html
+++ b/app/views/14-0/reserve-choose-start-date.html
@@ -47,8 +47,7 @@
 
         <form method="POST">
 
-            <div
-                class="govuk-form-group {% if myData.validationErrors.whichStartDateAnswer %}govuk-form-group--error{% endif %}">
+            <div class="govuk-form-group {% if myData.validationErrors.whichStartDateAnswer %}govuk-form-group--error{% endif %}">
                 <fieldset class="govuk-fieldset" aria-describedby="radio-hint">
                     <span id="radio-hint" class="govuk-hint">
                         The apprentice can start their apprenticeship training anytime in the month you choose, or the following 2 months.
