--- a/app/views/14-0/reserve-limit-reached.html
+++ b/app/views/14-0/reserve-limit-reached.html
@@ -23,11 +23,25 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
+        {% if _account.type == "pro" %}
+        <h1 class="govuk-heading-xl">
+            Funding restrictions
+        </h1>
+        <div class="govuk-warning-text">
+          <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+          <strong class="govuk-warning-text__text">
+            <span class="govuk-warning-text__assistive">Warning</span>
+            This employer has reached their limit for active funding reservations and cannot reserve any more funding at this time.
+          </strong>
+        </div>
+        <p class="govuk-body">Any funding you have previously reserved for this employer is unaffected by this restriction.</p>
+        {% else %}
         <h1 class="govuk-heading-xl">
             Reservation limit reached
         </h1>
 
         <p class="govuk-body">You have reached the limit of the number of funding reservations you can make.</p>
+        {% endif %}
 
         <!-- Button -->
         {% from "govuk/components/button/macro.njk" import govukButton %}
