--- a/app/views/14-0/reserve-choose-start-date.html
+++ b/app/views/14-0/reserve-choose-start-date.html
@@ -59,13 +59,17 @@
                     </span>
                     {% endif %}
                     <div class="govuk-radios" id="whichStartDateAnswer">
+                        {% set _index = 1 %}
                         {% for startDate in myData.startDates %}
-                        <div class="govuk-radios__item">
-                            <input class="govuk-radios__input" id="whichStartDate-{{loop.index}}" name="whichStartDateAnswer" type="radio" value="{{startDate.id}}" {% if myData.whichStartDateAnswerTemp == startDate.id %}checked{% endif %}>
-                            <label class="govuk-label govuk-radios__label" for="whichStartDate-{{loop.index}}">
-                                {{startDate.name}}
-                            </label>
-                        </div>
+                            {% if startDate.empmvs == true %}
+                            <div class="govuk-radios__item">
+                                <input class="govuk-radios__input" id="whichStartDate-{{_index}}" name="whichStartDateAnswer" type="radio" value="{{startDate.id}}" {% if myData.whichStartDateAnswerTemp == startDate.id %}checked{% endif %}>
+                                <label class="govuk-label govuk-radios__label" for="whichStartDate-{{_index}}">
+                                    {{startDate.name}}
+                                </label>
+                            </div>
+                            {% set _index = _index + 1 %}
+                            {% endif %}
                         {% endfor %}
                     </div>
                 </fieldset>
