--- a/app/views/14-0/reserve-check-answers-pro.html
+++ b/app/views/14-0/reserve-check-answers-pro.html
@@ -33,7 +33,7 @@
                 <dd class="govuk-summary-list__value">
                     {% for _employer in _account.employers %}
                         {% if myData.selectedEmployer == _employer.id %}
-                            {{_employer.name}}
+                            {{_employer.name|upper}}
                         {% endif %}
                     {% endfor %}
                 </dd>
