--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,7 +13,11 @@ Reserve funding prototype
     </h1>
 
     <ul class="govuk-list govuk-list--bullet">
-      <li><a href="/15-0/setup">Version 15</a></li>
+      <li><a href="/15-0/setup">Version 15</a>
+        <ul class="govuk-list govuk-list--bullet" style="color:red">
+          <li>things changed listed here for now...</li>
+        </ul>
+      </li>
       <li><a href="/14-0/setup">Version 14</a> (replicated MVS on 18/09/19)</li>
       <li><a href="https://esfa-create-apprenticeship.herokuapp.com/reserve/">Versions 1 - 13</a></li>
     </ul>
